--- a/smatrix/templates/flat.sh.j2
+++ b/smatrix/templates/flat.sh.j2
@@ -1,22 +1,34 @@
 {% include 'header.sh.j2' %}
 
-export __PARAMS=${{ parameters_list | quote }}
-export __SEP=${{ separator | quote }}
-export __TASKS_PER_JOB={{ tasks_per_job }}
+{# export __PARAMS=${{ parameters_list | quote }} #}
+__SEP=${{ separator | quote }}
+__TASKS_PER_JOB={{ tasks_per_job }}
+__TASKS_TOTAL={{ tasks_count }}
 
-{%- for cmd in setup %}
+# PARAMETERS 
+{% for parameter, values in parameters.items() %}
+__ARRAY_{{ parameter }}={{ values | join(separator) | quote }}
+{%- endfor %}
+
+{%- if not setup is none %}
+# SETUP
+{% for cmd in setup %}
 {{ cmd }}
 {%- endfor %}
+{%- endif %}
 
 
 for i in $(seq $__TASKS_PER_JOB); do
 
-    export __INDEX=$( expr $SLURM_ARRAY_TASK_ID '*' $__TASKS_PER_JOB '*' {{ parameters | length }} '+' $i )
+    __INDEX=$( expr $SLURM_ARRAY_TASK_ID '*' $__TASKS_PER_JOB '+' $i '-' 1)
+    __I=$__INDEX
 
-    {%- for parameter in parameters %}
-    export {{ parameter }}=$(echo $__PARAMS | cut -f $(expr {{ loop.index0 }} '+' $__INDEX) -d $__SEP)
-    {%- endfor %}
-
-    {{ cmd }}
+    if [ $__INDEX -lt $__TASKS_TOTAL ]; then
+        {%- for parameter, values in parameters.items() %}
+        export {{ parameter }}=$(echo $__ARRAY_{{ parameter }} | cut -f $(expr $__I '%' {{ values | length }} '+' 1) -d $__SEP)
+        __I=$(expr $__I '/' {{ values | length }} )
+        {%- endfor %}
+        {{ cmd }}
+    fi
 
 done
