--- a/smatrix/templates/flat.sh.j2
+++ b/smatrix/templates/flat.sh.j2
@@ -23,7 +23,7 @@ for i in $(seq $__TASKS_PER_JOB); do
     if [ $__INDEX -lt $__TASKS_TOTAL ]; then
         {%- for parameter, values in args.param.items() %}
         export {{ parameter }}=$(echo $__ARRAY_{{ parameter }} | cut -f $(( __I % {{ values | length }} + 1 )) -d $__SEP)
-        __I=$(expr $__I '/' {{ values | length }} )
+        __I=$(( __I / {{ values | length }} ))
         {%- endfor %}
         {{ args.wrap }}
     fi
